测试优化收尾：脚手架收口+防挂死+盲等清零+错误路径修正
①TestEnv新增waitServerRegisteredRange(baseId,count)：原(40,39+serverCount)端点对惯例在serverCount>=3时漏等中间id（4处调用点全换）。不定参重载的原因：会被ModuleRedirectRank(app,30,31)的varargs调用静默捕获、语义从"等30和31"变成"等30..60"。
②TestOnline/TestOnlineSpec迁入ZezexTestEnv（脚手架加serverIdBase参数）：TestOnline是TODO之外的第三个分叉且旧sleep(2000)被注释后零就绪等待，TestOnlineSpec为近逐字副本，合计净删~280行；TestGameTimer保留分叉，TODO改为精确描述剩余差异（websocket Start2/显式link地址）。
③防挂死：新增junit-platform.properties全局默认超时300s（最重真实JUnit测试~15s有日志为证，GlobalRaft的10s×重试循环是main驱动不经JUnit）；TestRoleTimer 9处/BenchRoleTimer/TestClassReloader的无界get/await换带超时重载（用get不用await(long)，后者返回boolean会吞超时）。
④脆性与盲等：TestGameTimer:264的1100ms窗口装10次100ms触发（余量~10%）改50ms×60有界轮询；TestTimer的assertSame依赖Integer缓存改assertEquals、空断言assertTrue(<=10)改cancel语义断言；TestRank等SM注册换waitServerRegisteredRange，TestLogService等的是LogService推送而非serverId注册、改轮询getLogServers非空，TestOnz无专用就绪信号、改轮询getZezeInstance（与perform同路径）；TestRoleTimer await后9处冗余sleep全删。
⑤抽Dbh2.Dbh2TestEnv脚手架消Dbh2FullTest/BenchDbh2FullTransaction近逐字拓扑重复（含半启动自清理），finally还原Dbh2MasterDefaultBucketPortId；Selectors.add(7)经查无安全撤销API（close()会毒化全JVM单例网络）保留并注释。
⑥Game.App补started/Zeze空值守卫（对齐demo.App先例；注意在GEN块内，重新生成会丢），ModuleRedirectRank的catch改包装原始start异常（原包装stop异常遮蔽根因）；TestOnz假设补探5012；TestThreadDiagnosable @AfterEach停诊断线程并还原全局disableInterrupt（fast车道并行内曾泄漏干扰同道类）。
⑦杂物：TestGameTimer的websocket探测经四证为死重删除（httpServer随linkd Start即eager启动、testRoleTimer1客户端走TCP、testRoleTimer2的ws路径本就无probe、fire-and-forget无断言）；跨类handle引用改自有副本；launcher死conf解析删除（构造器内部重解析；ServiceManagerServer.main同款一并删）；失效bat指针改指自启机制；未使用件清理（relogin/link0/link1/server1/timer1/timerRole1/roleCount）。

验收：fast 8s绿；integrationTest 97类267测试0失败，2m20s/死代码删除后复测2m11s（基线2m32s）；bench 11类全入车道53s绿；diff中@Test增删为零，覆盖无损。模式过滤--tests在本项目不工作（build.gradle:104已注明），定向验证只能整车道跑。